# Phase-Assisted-Generation

./: .gitignore  Makefile  README.md  phase_predict_bestval=0.510120.pt  phase_predict_bestval=0.573157.pt  phase_predict_bestval=0.610078.pt  phase_predict_bestval=0.638336.pt  phase_predict_bestval=0.684431.pt  phase_predict_bestval=2.450152.pt  pyproject.toml
AdaBlock-dLLM/dream/: eval_dream.md  eval_dream_pag.py  pag_predictor.py
AdaBlock-dLLM/llada/: eval_llada.md  eval_llada_pag.py  generate_pag.py  gsm8k_eval_prompts.jsonl  pag_predictor.py  quick_eval_prompts.jsonl  rf_scheduler.py  run_pag_dummy_api.py  run_pag_vs_adablock_eval.py  sample_prompts.jsonl
block_stab_predict/models/: train_metrics.json
configs/datasets/: mock_samples.yaml
configs/decoding/: adaptive.yaml  fixed.yaml
configs/evaluation/: default.yaml
configs/model/: mock_model.yaml
configs/predictor/: heuristic.yaml
configs/runs/: adaptive_mock.yaml  baseline_mock.yaml
configs/scheduler/: phase_adaptive.yaml
docs/: architecture.md  module_contracts.md  module_io_contracts.md  teammate_workflow.md  testing_guide.md  workflow_diagram.md
notebooks/: eda_adablock_gsm8k.ipynb
output/: classifier_6feat_bestval=2.258304.pt  medium_ws67_d128_h2_l3_dp10_lr0.5_bestval=0.099031.pt  medium_ws67_d64_h4_l3_dp20_lr1.0_bestval=0.471248.pt  phase_predict_d128_h2_l2_bestval=0.153622.pt  phase_predict_model_checkpoint.pt
output/ablations/: large_ws67_d256_h8_l1_dp0_lr1.0_bestval=0.095973.pt  medium_ws33_d128_h2_l2_dp20.pt  medium_ws33_d32_h2_l3_dp20.pt  medium_ws33_d64_h2_l2_dp20_lr0.1_bestval=0.140960.pt  (+3 more)
phase_cpd/: README.md  __init__.py  app.py  catalog.py  collect_traces.py  cpd.py  export_scheduler_dataset.py  features.py  io.py  report_trace_profiles.py  scheduler_dataset.py  schema.py  segments.py  visualize.py
phase_predict/: README.md  __init__.py  data_utils.py  dataset.py  evaluate.py  model.py  predict.py  schema.py  train.py  vomm.py
scripts/: ablate_phase_predict.py  ablate_vomm.py  build_predictor_dataset.py  eval_gen.py  eval_phase_predict.py  evaluate_runs.py  inspect_features.py  make_phase_tuples.py  make_stab_tuples.py  overfit_test.py  probe_adablock_llada.py  probe_adablock_llada_conf.py  probe_dream.py  probe_dream_countdown.py  probe_llada.py  probe_llada_countdown.py  run_adaptive.py  run_baseline.py  run_pag_vs_adablock_eval.py  run_phase_analysis.py  run_phase_predict_test.py  run_pipeline.py  run_vomm_test.py  train_phase_predict.py  train_vomm.py  view_llada_pag_logs.py  view_llada_pag_vs_adablock.py
tests/: __init__.py  conftest.py
traces/: countdown_baseline_traces.jsonl  phase_tuples_test.jsonl  phase_tuples_train.jsonl  stab_tuples_conf_test.jsonl  stab_tuples_test.jsonl
writeup/: final_report.tex  proposal.tex  writeup.tex
(+129 files in other folders)
