[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pag"
version = "0.1.0"
description = "Loose-contract skeleton for the Phase-Adaptive Generation project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "torch>=2.0",
  "transformers==4.46.3",
  "accelerate>=0.30",
  "datasets>=2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[project.scripts]
pag = "pag.orchestration.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pag = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
default-groups = ["dev"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
