[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pag"
version = "0.1.0"
description = "Loose-contract skeleton for the Phase-Adaptive Generation project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "torch>=2.0",
  "transformers==4.46.3",
  "accelerate>=0.30",
  "datasets>=2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]
phase_cpd = [
  "altair>=5.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "ruptures>=1.1.9",
  "streamlit>=1.42",
]
phase_predict = [
  "numpy>=1.26",
  "torch>=2.0",
]
block_stab_predict = [
  "joblib>=1.5.3",
  "numpy>=1.26",
  "scikit-learn>=1.8.0",
]
phase_cpd_dream = [
  "accelerate>=0.33",
  "altair>=5.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "ruptures>=1.1.9",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "streamlit>=1.42",
  "torch==2.5.1",
  "torchaudio==2.5.1",
  "torchvision==0.20.1",
  "transformers==4.46.3",
]

[project.scripts]
pag = "pag.orchestration.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pag = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
